Fixed jumping search form

--- a/web/css/layout/_minisearch.less
+++ b/web/css/layout/_minisearch.less
@@ -43,7 +43,6 @@
                 z-index: 40;
                 left: 0;
                 right: 0;
-                margin: 0;
             }
             .actions {
                 display: flex;
@@ -56,6 +55,7 @@
             background: @base__background;
             position: absolute;
             top: 100%;
+            margin: 0 !important;
             .left(-9999px);
 
             @media @media-sm {
